--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <div id="div1">
-        <div class="bg_black bd_red color_white italic" id="tag2">
+        <div class="bg_black bd_red color_white italic  align_center" id="tag2">
             <h2>Welcome to Dhaba <br> you get Quality food here</h2>
         </div>
-        <div class="bg_black bd_red color_white italic" id="tag1">
+        <div class="bg_black bd_red color_white italic align_center" id="tag1">
             <h2> <br> Home Menu review contact us</h2>
         </div>
-        <div class="bg_black bd_red color_white italic" id="contact">
+        <div class="bg_black bd_red color_white italic align_center" id="contact">
             <h2> Email:Store@gmail.com <br>  If you find any complain  <br> Contact on-94566*****</h2>
         </div>
     </div>
@@ -54,11 +54,11 @@
         </div>
     </div>
     <div class="menu">
-        <div class="bg_black bd_red color_white uppercase " id="menu_title">
+        <div class="bg_black bd_red color_white uppercase align_center" id="menu_title">
             <h1>menu</h1>
         </div>
         <hr>
-        <div id="flex">
+        <div id="flex" class="align_center">
             <div class="box bg_aqua bd_green">
                 <h1>Starters</h1>
                 <hr>
